# quickfuck

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
systemd/: thefuckd.service
thefuck/: conf.py  corrector.py  daemon.py  logs.py  types.py  utils.py
thefuck/entrypoints/: fix_command.py
thefuck/output_readers/: rerun.py  shell_logger.py
thefuck/rules/: apt_invalid_operation.py  brew_install.py  brew_unknown_command.py  chmod_missing_plus.py  docker_not_command.py  git_checkout.py  git_fix_stash.py  git_flag_after_filename.py  gradle_no_task.py  no_command.py
thefuck/rules/shell/: function_call_syntax.py  no_command.py
thefuck/rules/typo/: missing_space_before_subcommand.py
thefuck/shells/: bash.py  fish.py  generic.py  zsh.py
